# throtsmtp

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
src/: admin.py  config.py  db.py  main.py  queue_manager.py  relay_worker.py  smtp_handler.py
systemd/: throt-relay.service
tests/: test_config.py  test_integration.py  test_queue_manager.py  test_relay_worker.py  test_smtp_handler.py
